Mise au propre de l'architecture

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     ],
     "autoload":{
         "psr-4":{
+            "Routes\\":"routes/",
+            "App\\":"app/",
             "Database\\":"Database/"
         }
     },
